--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <meta name="description" content="This is a React application" />
+    <meta name="description" content="This is a educational guidence application" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="../src/App.css" />
         <title>KadamForward</title>
   </head>
   <body>
